--- a/SampleManagement2/res/layout/manage_employee.xml
+++ b/SampleManagement2/res/layout/manage_employee.xml
@@ -7,45 +7,90 @@
     android:stretchColumns="1" >
 
     <TextView
-        android:id="@+id/manage_textview1"
+        android:id="@+id/ad_textview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/title_padding"
-        android:text="@string/welcome2"
-        android:textSize="@dimen/label_font_size" />
+        android:textSize="@dimen/label_font_size_2" />
 
-    <TableRow>
+    <RelativeLayout
+        android:id="@+id/RelativeLayoutAD01"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:id="@+id/LinerLayoutAD01"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/linearlayout_end_margin"
+            android:layout_marginLeft="@dimen/sub_layout_magin_left"
+            android:layout_marginRight="@dimen/linearlayout_right_margin"
+        android:layout_marginStart="@dimen/sub_layout_magin_left"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:focusable="true"
+
+android:focusableInTouchMode="true" >
+    </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/ad_id"
-            android:textSize="@dimen/label_font_size" />
+            android:layout_marginTop="@dimen/textview_top_margin"
+                android:layout_weight="2"
+                android:text="@string/ad_id"
+/>
 
         <EditText
             android:id="@+id/userEditText"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
-    </TableRow>
+            android:layout_weight="1"
+                android:textSize="15sp" />
+    </LinearLayout>
+    </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/RelativeLayoutUserName01"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/RelativeLayoutAD01"
+        android:layout_alignRight="@+id/RelativeLayoutAD01"
+        android:layout_below="@id/RelativeLayoutAD01"
+        android:layout_marginLeft="@dimen/sub_layout_magin_left"
+        android:layout_marginStart="@dimen/sub_layout_magin_left" >
 
-    <TableRow>
+        <LinearLayout
+            android:id="@+id/LinerLayoutUserName01"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+
+android:layout_marginEnd="@dimen/linearlayout_end_margin"
+
+android:layout_marginRight="@dimen/linearlayout_right_margin"
+    android:orientation="horizontal" >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/user_name_manage"
-            android:textSize="@dimen/label_font_size" />
+            android:layout_marginTop="@dimen/textview_top_margin"
+                android:layout_weight="2"
+                android:text="@string/user_name_manage"
+/>
 
         <EditText
             android:id="@+id/pwdEditText"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="" />
-    </TableRow>
+            android:layout_weight="1"
+                android:textSize="15sp" />
+    </LinearLayout>
 
+</RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -55,14 +100,14 @@
 
         <Button
             android:id="@+id/bnCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_width_m"
+            android:layout_height="@dimen/button_height_m"
             android:text="@string/cancel" />
 
         <Button
             android:id="@+id/bnedit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_width_m"
+            android:layout_height="@dimen/button_height_m"
             android:text="@string/update" />
     </LinearLayout>
 
