--- a/SampleManagement2/res/layout/manage_sample.xml
+++ b/SampleManagement2/res/layout/manage_sample.xml
@@ -7,31 +7,53 @@
     android:stretchColumns="1" >
 
     <TextView
-        android:id="@+id/manage_textview1"
+        android:id="@+id/sample_textview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/title_padding"
-        android:text="@string/welcome1"
-        android:textSize="@dimen/label_font_size" />
-    <!-- 输入型号名的行 -->
+        android:textSize="@dimen/label_font_size_2" />
 
-    <TableRow>
+    <RelativeLayout
+        android:id="@+id/RelativeLayoutSampleID01"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:id="@+id/LinerLayoutSampleID01"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/linearlayout_end_margin"
+            android:layout_marginLeft="@dimen/sub_layout_magin_left"
+            android:layout_marginRight="@dimen/linearlayout_right_margin"
+            android:layout_marginStart="@dimen/sub_layout_magin_left"
+        android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="0px"
+    android:layout_height="0px"
+
+android:focusable="true"
+    android:focusableInTouchMode="true" >
+            </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/phone_id"
-            android:textSize="@dimen/label_font_size" />
+            android:layout_marginTop="@dimen/textview_top_margin"
+                android:layout_weight="3"
+                android:text="@string/phone_id"
+/>
 
         <EditText
             android:id="@+id/ModelIDEditText"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/prompt_sample"
-            android:text=""
+            android:layout_weight="2"
             android:textSize="15sp" />
-            <ImageView
+            </LinearLayout>
+
+        <ImageView
             android:id="@+id/Scan"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
@@ -42,23 +64,43 @@
             android:scaleType="centerInside"
             android:src="@drawable/scan" >
         </ImageView>
-    </TableRow>
+    </RelativeLayout>
 
-    <TableRow>
+    <RelativeLayout
+        android:id="@+id/RelativeLayoutSampleName01"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/RelativeLayoutSampleID01"
+        android:layout_alignRight="@+id/RelativeLayoutSampleID01"
+        android:layout_below="@id/RelativeLayoutSampleID01"
+        android:layout_marginLeft="@dimen/sub_layout_magin_left"
+        android:layout_marginStart="@dimen/sub_layout_magin_left" >
+
+        <LinearLayout
+            android:id="@+id/LinerLayoutSampleName01"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/linearlayout_end_margin"
+            android:layout_marginRight="@dimen/linearlayout_right_margin"
+            android:orientation="horizontal" >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/model_name_manage"
-            android:textSize="@dimen/label_font_size" />
+            android:layout_marginTop="@dimen/textview_top_margin"
+                android:layout_weight="3"
+                android:text="@string/model_name_manage"
+/>
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/ModelEditText"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
-    </TableRow>
-    <!-- 定义登录、取消按钮的行 -->
+            android:layout_weight="2"
+                android:completionThreshold="1"
+                android:dropDownHeight="1000dp" />
+    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -68,14 +110,14 @@
 
         <Button
             android:id="@+id/bnCancel1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_width_m"
+            android:layout_height="@dimen/button_height_m"
             android:text="@string/cancel" />
 
         <Button
             android:id="@+id/bnedit1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_width_m"
+            android:layout_height="@dimen/button_height_m"
             android:text="@string/update" />
     </LinearLayout>
 
