--- a/SampleManagement2/res/values/dimens.xml
+++ b/SampleManagement2/res/values/dimens.xml
@@ -14,8 +14,11 @@
     <dimen name="button_font_size">13sp</dimen>
     <dimen name="sub_layout_magin_left">7dp</dimen>
 
-<dimen name="label_font_size">20dip</dimen>
-	<dimen name="label_font_size_2">17dip</dimen>
+	<dimen name="label_font_size_2">12dip</dimen>
     <dimen name="title_padding">30px</dimen>
 	<dimen name="sub_title_margin">20px</dimen>
+	<!-- wjm -->
+	<dimen name="button_width_m">100dp</dimen>
+    <dimen name="button_height_m">60dp</dimen>
+    <!-- wjm -->
 </resources>
