--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -18,133 +18,115 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.03"
-            android:weightSum="1">
-
+            >
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content" >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/phone_id"
-                android:id="@+id/textView"
-                android:layout_weight="0.80"
-                android:background="@android:color/holo_green_dark" />
+                android:id="@+id/textView" />
+            <EditText
+                android:id="@+id/editText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+ />
+
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content" >
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/model_name"
-                android:id="@+id/textView2"
-                android:background="@android:color/holo_green_dark"
-                android:layout_weight="0.30" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <EditText
-                android:id="@+id/editText"
-                android:layout_width="103dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.70"
-                android:ems="10" />
-
-            <Button
-                android:id="@+id/button1"
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="33dp"
-                 android:layout_weight="0.10"
-                android:text="ok" />
+                android:id="@+id/textView2"/>
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="89dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.20"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </TableRow>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="31dp"
-            android:weightSum="1">
-
+        <TableRow
+            android:layout_width="80dp"
+            android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/user_name"
-                android:id="@+id/textView4"
-                android:layout_weight="0.20"
-                android:background="@android:color/holo_green_dark" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/holo_green_dark"
-                android:text="@string/lend_date"
-                android:layout_weight="0.40"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/return_date"
-                android:id="@+id/textView6"
-                android:layout_weight="0.40"
-                android:background="@android:color/holo_green_dark" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.06"
-            android:weightSum="1">
+                android:id="@+id/textView4" />
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="80dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.20"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:text="@string/lend_date"/>
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="80dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.40"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:text="@string/return_date"
+                android:id="@+id/textView6"
+                android:autoText="true" />
 
             <TextView
                 android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.82"/>
+        </TableRow>
+        </TableLayout>
+
+<LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.40"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:text="@string/doscan"
+                android:id="@+id/button"
+                android:layout_weight="0.01"
+                android:background="@color/action_bar"/>
 
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ok"
+                android:background="@color/action_bar"
+                android:layout_weight="0.01" />
         </LinearLayout>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/doscan"
-            android:id="@+id/button"
-            android:layout_weight="0.03"
-            android:background="@android:color/holo_blue_bright"
-            android:textColor="#8b0b0b" />
 
         <Button
             android:layout_width="match_parent"
@@ -152,22 +134,16 @@
             android:text="@string/return_confirm"
             android:id="@+id/button3"
             android:layout_weight="0.03"
-            android:background="@android:color/holo_blue_light" />
+             android:background="@color/action_bar"
+/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/othernote"
             android:id="@+id/textView10"
             android:layout_weight="0.03"
-            android:textColor="#510303" />
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.61" />
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
