--- a/SampleManagement2/res/layout/sign.xml
+++ b/SampleManagement2/res/layout/sign.xml
@@ -5,15 +5,6 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/iv_sign"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="3dp"
-        android:layout_weight="1"
-          android:background="@color/white" />
-
     <FrameLayout
         android:id="@+id/tablet_view"
         android:layout_width="fill_parent"
@@ -25,7 +16,6 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@android:drawable/bottom_bar"
         android:paddingTop="3dp" >
 
         <Button
@@ -33,14 +23,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="确定" />
+            android:text="确定"
+            android:background="@color/action_bar" />
 
         <Button
             android:id="@+id/tablet_clear"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="清除" />
+            android:text="清除"
+            android:background="@color/action_bar" />
     </LinearLayout>
 
 </LinearLayout>
