--- a/SampleManagement2/res/layout/activity_query_search.xml
+++ b/SampleManagement2/res/layout/activity_query_search.xml
@@ -31,7 +31,7 @@
                 android:layout_width="105dip"
                 android:layout_height="wrap_content" 
                 android:gravity="center"
-               
+                android:textSize="@dimen/text_font_size"
                 
                 />
     <AutoCompleteTextView
@@ -54,7 +54,7 @@
                 android:layout_width="105dip"
                 android:layout_height="wrap_content" 
                 android:gravity="center"
-            
+                android:textSize="@dimen/text_font_size"
                 />
        <AutoCompleteTextView
             android:id="@+id/auto2"
