--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -18,30 +18,52 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content" >
+
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/phone_id"
                 android:id="@+id/textView"
-                android:textSize="@dimen/text_font_size" />
+              android:textSize="@dimen/text_font_size"
+              android:layout_marginLeft="40dp" />
+            
+            
+             <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+             >
+
+
+                <Button
+                android:id="@+id/scan"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/scan"
+                 android:layout_marginLeft="20dp"
+                  android:layout_marginTop="5dp" />
+            
             <EditText
              android:id="@+id/editText2"
             android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:ems="10" />
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/search" />
+
+            </LinearLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            
- />
+            >
 
-
-        </TableRow>
 
         <TableRow
             android:id="@+id/tableRow2"
@@ -50,7 +72,7 @@
 
             <TextView
                 android:layout_width="80dp"
-                android:layout_height="25dp"
+                android:layout_height="40dp"
                 android:text="@string/model_name"
                 android:id="@+id/textView2"
                 android:textSize="@dimen/text_font_size"/>
@@ -58,7 +80,7 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:textSize="@dimen/text_font_size" />
         </TableRow>
 
@@ -67,7 +89,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="80dp"
-                android:layout_height="25dp"
+                android:layout_height="40dp"
                 android:text="@string/user_name"
                 android:id="@+id/textView4" 
                 android:textSize="@dimen/text_font_size"/>
@@ -75,7 +97,7 @@
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:textSize="@dimen/text_font_size"/>
         </TableRow>
 
@@ -85,14 +107,14 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="80dp"
-                android:layout_height="25dp"
+                android:layout_height="40dp"
                 android:text="@string/lend_date"
                 android:textSize="@dimen/text_font_size"/>
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:textSize="@dimen/text_font_size"/>
         </TableRow>
 
@@ -101,7 +123,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="80dp"
-                android:layout_height="25dp"
+                android:layout_height="40dp"
                 android:text="@string/return_date"
                 android:id="@+id/textView6"
                 android:autoText="true"
@@ -110,7 +132,7 @@
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.82"
                 android:textSize="@dimen/text_font_size"/>
         </TableRow>
@@ -122,39 +144,37 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/doscan"
-                android:id="@+id/button"
-                android:layout_weight="0.01"
-                android:background="@color/action_bar"/>
-
+                android:text="@string/return_confirm"
+                android:id="@+id/button3"
+                android:layout_weight="0.03"
+                android:background="@drawable/button_selector"
+                 android:textSize="@dimen/button_font_size" 
+                />
             <Button
-                android:id="@+id/button1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ok"
-                android:background="@color/action_bar"
-                android:layout_weight="0.01" />
+                android:text="@string/clear"
+                android:id="@+id/button4"
+                android:layout_weight="0.03"
+                android:background="@drawable/button_selector"
+                 android:textSize="@dimen/button_font_size" 
+                
+                />
+
+
         </LinearLayout>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/return_confirm"
-            android:id="@+id/button3"
-            android:layout_weight="0.03"
-             android:background="@color/action_bar"
-/>
 
+
+    </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/othernote"
             android:id="@+id/textView10"
             android:layout_weight="0.03"
-            android:textColor="@color/black" />
-
-    </LinearLayout>
-
+            android:textColor="@color/black"
+            android:layout_alignParentBottom="true" />
 </RelativeLayout>
