--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hongpenglong.areturn.MainActivity">
 
-    <LinearLayout
+   <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,15 +18,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="@string/phone_id"
-                android:id="@+id/textView"
-              android:textSize="@dimen/text_font_size"
-              android:layout_marginLeft="40dp" />
-            
             
              <LinearLayout
                 android:orientation="horizontal"
@@ -63,7 +54,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content" >
 
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
+                    android:text="@string/phone_id"
+                    android:id="@+id/textViewx"
+                    android:textSize="@dimen/text_font_size" />
+
+
+                <TextView
+                    android:id="@+id/textViewy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_font_size" />
+            </TableRow>
 
         <TableRow
             android:id="@+id/tableRow2"
