--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -160,6 +160,7 @@
                 android:layout_weight="0.03"
                 android:background="@drawable/button_selector"
                  android:textSize="@dimen/button_font_size" 
+                  android:layout_marginTop="50dp"
                 />
             <Button
                 android:layout_width="match_parent"
@@ -169,7 +170,7 @@
                 android:layout_weight="0.03"
                 android:background="@drawable/button_selector"
                  android:textSize="@dimen/button_font_size" 
-                
+                 android:layout_marginTop="50dp"
                 />
 
 
