--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -32,13 +32,13 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:background="@drawable/scan"
-                 android:layout_marginLeft="20dp"
+
                   android:layout_marginTop="5dp" />
             
             <EditText
              android:id="@+id/editText2"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:ems="10" />
 
             <Button
@@ -60,18 +60,20 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:layout_width="80dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:text="@string/phone_id"
                     android:id="@+id/textViewx"
-                    android:textSize="@dimen/text_font_size" />
+                    android:textSize="@dimen/text_font_size" 
+                    android:layout_weight="1"/>
 
 
                 <TextView
                     android:id="@+id/textViewy"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_font_size" />
+                    android:textSize="@dimen/text_font_size" 
+                     android:layout_weight="2"/>
             </TableRow>
 
         <TableRow
@@ -80,34 +82,38 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="@string/model_name"
                 android:id="@+id/textView2"
-                android:textSize="@dimen/text_font_size"/>
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_font_size" />
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="2" />
         </TableRow>
 
         <TableRow
             android:layout_width="80dp"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="@string/user_name"
                 android:id="@+id/textView4" 
-                android:textSize="@dimen/text_font_size"/>
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_font_size"/>
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="2"/>
         </TableRow>
 
         <TableRow
@@ -115,35 +121,38 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="@string/lend_date"
-                android:textSize="@dimen/text_font_size"/>
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_font_size"/>
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="2"/>
         </TableRow>
 
         <TableRow
             android:layout_width="80dp"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="@string/return_date"
                 android:id="@+id/textView6"
                 android:autoText="true"
-                android:textSize="@dimen/text_font_size" />
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.82"
-                android:textSize="@dimen/text_font_size"/>
+                android:textSize="@dimen/text_font_size"
+                 android:layout_weight="2"/>
         </TableRow>
         </TableLayout>
 
