--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -29,23 +29,26 @@
 
                 <Button
                 android:id="@+id/scan"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:background="@drawable/scan"
-
+               android:layout_marginLeft="25dp"
+               android:layout_marginRight="10dp"
                   android:layout_marginTop="5dp" />
             
             <EditText
              android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10" />
+            android:ems="9" />
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
                 android:background="@drawable/search" />
 
             </LinearLayout>
@@ -53,6 +56,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
             >
             <TableRow
                 android:id="@+id/tableRow1"
@@ -79,7 +83,8 @@
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="80dp"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+             >
 
             <TextView
                 android:layout_width="wrap_content"
