--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -40,6 +40,7 @@
              android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             android:ems="7" />
 
             <Button
